# MatAGen

./: .gitignore  README.md  Screen Shot 2022-11-21 at 1.48.44 PM.png_extracted_abs.json  Screen Shot 2022-11-21 at 12.05.19 PM.png_extracted_abs.json  gpt4_multimodal_results.csv  literature_mining_demo.ipynb  pyproject.toml  requirements copy.txt  requirements.txt  run_ecps_test.py  scrape_ecps.py  scrape_omiecs copy.py  scrape_omiecs.py
.mmatagen/: pyvenv.cfg
.mmatagen/Scripts/: activate  activate.bat
config/: settings.py
custom_tools/: __init__.py  abs_segmentation.py  abs_segmentation_tool copy.py  abs_segmentation_tool.py  calculator_tool.py  docs.py  get_omiec_dataset.py  molecular_structure_segmentation_tool.py  multimodal_data_retriever.py  multimodal_data_tool.py  multimodal_retrieval_tool.py  paper_scraper_tool.py  pdf_assistant.py  plot_extracted_abs.py  pneumatic_co.py
data/test_files/: Screen Shot 2022-11-21 at 1.32.01 PM.png_extracted_abs.json  Screen Shot 2022-11-21 at 12.05.19 PM.png_extracted_abs.json  nmat2272_fig1_b_gra.jpg_extracted_abs.json  spectral_data.json
html-scraping/: _captions  exsclaim.json
notebook/: tutorial_1_data_mining.ipynb  tutorial_3_image_segmentation.ipynb
notebooks/: literature_mining_demo_1.ipynb  literature_mining_demo_2 copy.ipynb  literature_mining_demo_3.ipynb  multimodal_rag.ipynb  workshop_tutorial.ipynb
notebooks/my_multimodal_chroma_db/: chroma.sqlite3
notebooks/outputs/pdf_papers/: _captions  _figures  exsclaim.json  retrieved_image_caption_pairs.json
notebooks/pdf_papers/: _captions  exsclaim.json
outputs/html_scraping/: _captions  _figures  exsclaim.json
outputs/html_scraping/html/: nmat2272.html
outputs/html_scraping_expected_results/: exsclaim.json  retrieved_image_caption_pairs.json  save_extracted_plots.py
outputs/html_scraping_expected_results/html/: nmat2272.html
outputs/multimodal_data_folder_test/: retrieved_images.json
outputs/pdf_runs/2024-Aikaterinis-Individual-Fidelity-Go-5320-Consolidated-Form-1099_Text_Only_1744242599/: 2024-Aikaterini's-Individual-Fidelity-Go-5320-Consolidated-Form-1099_text_only.txt
outputs/pdf_runs/ICLR_2025_Ai4Mat_final_Text_Only_1744241629/: ICLR_2025_Ai4Mat_final_text_only.txt
outputs/pdf_runs/ICLR_2025_Ai4Mat_final_Text_Only_1744249777/: ICLR_2025_Ai4Mat_final_text_only.txt
outputs/pdf_runs/PhysRevApplied22L031004_Text_Only_1744242578/: PhysRevApplied.22.L031004_text_only.txt
outputs/pdf_runs/User-Manual-NDJ-5S-NDJ-8S_Text_Only_1744242917/: User-Manual-NDJ-5S-NDJ-8S_text_only.txt
outputs/pdf_runs/V2_ICLR_2025_Conference_Submissions_CALMS_Polybot4_Text_Only_1744242917/: V2_ICLR_2025_Conference_Submissions_CALMS_Polybot (4)_text_only.txt
pipeline/: nodes.py  pipeline_graph.py
src/: agents copy.py  agents.py  claude_abs_extraction.py  claude_abs_test.py  main.py
src/matagen/agents/: multimodal_agents.py  (+4 more)
ui/: app copy.py  app.py  app.txt  test_app.py
(+326 files in other folders)
